--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "katex": "^0.12.0",
+    "prismjs": "^1.23.0",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuescroll": "^4.16.1",
