feat:Community View

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,5 +1,13 @@
 {
-    "include": [
-      "./src/**/*"
-    ]
+  "compilerOptions": {
+    "target": "es2015",
+    "module": "esnext",
+    "baseUrl": "./",
+    "paths": {
+      "@/*": ["components/*"]
+    }
+  },
+  "include": [
+    "src/**/*"
+  ]
 }
