--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "apollo-link-error": "^1.1.13",
     "apollo-link-http": "^1.5.17",
     "core-js": "^3.6.5",
+    "g": "^2.0.1",
     "graphql": "^16.3.0",
     "graphql-tag": "^2.12.6",
     "katex": "^0.12.0",
+    "pnpm": "^6.30.0",
     "prismjs": "^1.23.0",
+    "tailwindcss": "^3.0.19",
     "vue": "^2.6.11",
     "vue-apollo": "^3.1.0",
     "vue-router": "^3.2.0",
@@ -54,8 +57,7 @@
     "parserOptions": {
       "parser": "babel-eslint"
     },
-    "rules": {
-    }
+    "rules": {}
   },
   "browserslist": [
     "> 1%",
