--- a/package.json
+++ b/package.json
@@ -1,68 +1,67 @@
 {
-  "name": "guoj-frontend",
-  "version": "0.1.0",
-  "private": true,
-  "license": "AGPL-3.0",
-  "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
-  },
-  "dependencies": {
-    "ansi-regex": "^5.0.1",
-    "apollo-cache-inmemory": "^1.6.6",
-    "apollo-client": "^2.6.10",
-    "apollo-link": "^1.2.14",
-    "apollo-link-error": "^1.1.13",
-    "apollo-link-http": "^1.5.17",
-    "core-js": "^3.6.5",
-    "g": "^2.0.1",
-    "graphql": "^16.3.0",
-    "graphql-tag": "^2.12.6",
-    "katex": "^0.12.0",
-    "pnpm": "^6.30.0",
-    "prismjs": "^1.23.0",
-    "tailwindcss": "^3.0.19",
-    "vue": "^2.6.11",
-    "vue-apollo": "^3.1.0",
-    "vue-router": "^3.2.0",
-    "vuescroll": "^4.16.1",
-    "vuetify": "^2.2.11",
-    "vuex": "^3.4.0",
-    "vuex-persist": "^3.1.3"
-  },
-  "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.3.0",
-    "@vue/cli-plugin-eslint": "^3.1.1",
-    "@vue/cli-plugin-router": "3.12.1",
-    "@vue/cli-plugin-vuex": "~4.5.0",
-    "@vue/cli-service": "^3.12.1",
-    "babel-eslint": "^10.1.0",
-    "eslint": "^8.8.0",
-    "eslint-plugin-vue": "^8.4.1",
-    "sass": "~1.32.13",
-    "sass-loader": "^8.0.0",
-    "vue-cli-plugin-vuetify": "~2.0.7",
-    "vue-template-compiler": "^2.6.11",
-    "vuetify-loader": "^1.3.0"
-  },
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
+    "name": "guoj-frontend",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "serve": "vue-cli-service serve",
+        "build": "vue-cli-service build",
+        "lint": "vue-cli-service lint"
     },
-    "extends": [
-      "plugin:vue/essential",
-      "eslint:recommended"
+    "dependencies": {
+        "apollo-cache-inmemory": "^1.6.6",
+        "apollo-client": "^2.6.10",
+        "apollo-link": "^1.2.14",
+        "apollo-link-error": "^1.1.13",
+        "apollo-link-http": "^1.5.17",
+        "core-js": "^3.6.5",
+        "g": "^2.0.1",
+        "graphql": "^16.3.0",
+        "graphql-tag": "^2.12.6",
+        "katex": "^0.12.0",
+        "pnpm": "^6.30.0",
+        "prismjs": "^1.23.0",
+        "tailwindcss": "^3.0.19",
+        "vue": "^2.6.11",
+        "vue-apollo": "^3.1.0",
+        "vue-router": "^3.2.0",
+        "vuescroll": "^4.16.1",
+        "vuetify": "^2.2.11",
+        "vuex": "^3.4.0",
+        "vuex-persist": "^3.1.3"
+    },
+    "devDependencies": {
+        "@vue/cli-plugin-babel": "~4.5.15",
+        "@vue/cli-plugin-eslint": "~4.5.15",
+        "@vue/cli-plugin-router": "~4.5.0",
+        "@vue/cli-plugin-vuex": "~4.5.0",
+        "@vue/cli-service": "~4.5.15",
+        "babel-eslint": "^10.1.0",
+        "eslint": "^8.8.0",
+        "eslint-plugin-vue": "^8.4.1",
+        "sass": "~1.32.13",
+        "sass-loader": "^8.0.0",
+        "vue-cli-plugin-vuetify": "~2.4.5",
+        "vue-template-compiler": "^2.6.11",
+        "vuetify-loader": "^1.3.0"
+    },
+    "eslintConfig": {
+        "root": true,
+        "env": {
+            "node": true
+        },
+        "extends": [
+            "plugin:vue/essential",
+            "eslint:recommended"
+        ],
+        "parserOptions": {
+            "parser": "babel-eslint"
+        },
+        "rules": {}
+    },
+    "browserslist": [
+        "> 1%",
+        "last 2 versions",
+        "not dead"
     ],
-    "parserOptions": {
-      "parser": "babel-eslint"
-    },
-    "rules": {}
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not dead"
-  ]
+    "license": "AGPL-3.0"
 }
